--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -39,6 +39,7 @@
 								<field name="target_line_ids" attrs="{'readonly':[('state','!=','draft')]}">
 									<tree editable='bottom'>
 										<field name="reverse_id" invisible='1'/>
+										<field name="salesperson_id" invisible="1"/>
 										<field name="product_id"/>
 										<field name="target_quantity"/>
 										<field name="threshold_quantity"/>
