--- a/salesperson_sales_target_app/views/sale_target_line.xml
+++ b/salesperson_sales_target_app/views/sale_target_line.xml
@@ -9,13 +9,17 @@
 					<sheet>
 						<group>
 							<group>
+								<field name="salesperson_employee_no"/>
 								<field name="salesperson_id" />
 								<field name="product_id"/>
-								<field name="target_quantity"/>
-								<field name="threshold_quantity"/>
+								<field name="start_date" />
+								<field name="start_date" />
 							</group>
 							<group>
+								<field name="target_quantity"/>
+								<field name="threshold_quantity"/>
 								<field name="achieve_quantity"/>
+								<field name="difference"/>
 								<field name="incentive_unit_product" />
 								<field name="achieve_perc"  widget="progressbar"/>
 								<field name="incentive_pay" />
@@ -31,14 +35,18 @@
 			<field name="model">targetline.targetline</field>
 			<field name="arch" type="xml">
 				<tree>
+					<field name="salesperson_employee_no"/>
 					<field name="salesperson_id"/>
+					<field name="start_date"/>
+					<field name="end_date"/>
 					<field name="product_id"/>
 					<field name="target_quantity"/>
 					<field name="threshold_quantity"/>
 					<field name="achieve_quantity"/>
+					<field name="difference"/>
 					<field name="incentive_unit_product" />
-					<field name="achieve_perc"  widget="progressbar"/>
 					<field name="incentive_pay" />
+					<field name="achieve_perc"  widget="progressbar"/>
 				</tree>
 			</field>
 		</record>
