--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 	<data>
+		<record model="ir.ui.view" id="view_product_template_inh">
+            <field name="name">template.product.inherit</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='barcode']" position="after">
+                    <field name="points"/>
+                    <field name="incentive_pay"/>
+                </xpath>
+            </field>
+        </record>
 		<record model="ir.ui.view" id="sale_target_form_view">
 			<field name="name">Sale Target</field>
 			<field name="model">saletarget.saletarget</field>
@@ -22,6 +33,7 @@
 						<group>
 							<group>
 								<field name="sales_person_id" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}" />
+								<field name="sales_staff_id" attrs="{'readonly':[('state','!=','draft')]}" string="Staff ID"/>
 								<field name="start_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="end_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="target_achieve" attrs="{'readonly':[('state','!=','draft')],'invisible':[('achieve','=',0)]}"/>
@@ -49,6 +61,7 @@
 										<field name="target_quantity"/>
 										<field name="threshold_quantity"/>
 										<field name="achieve_quantity"/>
+										<field name="returned_quantity"/>
 										<field name="difference"/>
 										<field name="incentive_unit_product" />
 										<field name="incentive_pay" />
@@ -67,7 +80,7 @@
 										<field name="product_id" />
 										<field name="date" />
 										<field name="quantity" />
-										</tree>
+									</tree>
 								</field>
 							</page>
 						</notebook>
@@ -86,8 +99,8 @@
 					<field name="start_date"/>
 					<field name="end_date"/>
 					<field name="target"/>
-					<field name="difference"/>
 					<field name="achieve"/>
+					<field name="difference"/>
 					<field name="average"/>
 					<field name="total_points" string="Total Points" />
 					<field name="achieve_percentage" widget="progressbar" />
@@ -150,6 +163,22 @@
 			<field name="view_mode">graph</field>
 			<field name="view_id" ref="salesperson_sales_target_app.view_sale_target_graph"/>
 			<field name="act_window_id" ref="sale_target_entry"/>
+		</record>
+
+		<record id="view_sales_target_filter" model="ir.ui.view">
+			<field name="name">sale.target.list.select</field>
+			<field name="model">saletarget.saletarget</field>
+			<field name="priority" eval="15"/>
+			<field name="arch" type="xml">
+				<search string="Search Sales Target">
+					<field name="sales_staff_id" string="Staff ID" />
+					<field name="sales_person_id" />
+					<field name="target"/>
+					<group expand="0" string="Group By">
+						<filter string="Salesperson" name="sales_person_id" domain="[]" context="{'group_by': 'sales_person_id'}"/>
+					</group>
+				</search>
+			</field>
 		</record>
 
 		<menuitem name="Sales Target" id="sale_target_report" parent="sale.sale_order_menu" action="sale_target_entry"/>
